# jax_md_flexible_cell

./: .gitignore  .pre-commit-config.yaml  AUTHORS  README.md  pyproject.toml
examples/: at_start_1500.vasp  jax_md_flex.py  model_params.pkl  params.info
src/jax_md_flex_extension/: __init__.py  quantity.py  simulate.py
